responsive laporan can jadi

--- a/public/Coba.html
+++ b/public/Coba.html
@@ -13,8 +13,8 @@
         <h1>I'm a</h1>
         <ul class="dynamic-text">
             <li><span>Student</span></li>
-            <li><span>Programmer</span></li>
-            <li><span>Developer</span></li>
+            <li><span>Botak Koding</span></li>
+            <li><span>Student</span></li>
             <li><span>Botak Koding</span></li>
         </ul>
 
