--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;700;900&family=Kaisei+Tokumin:wght@400;500;700&family=Poppins:wght@200;300;400&display=swap" rel="stylesheet">
   <!-- End G-Font -->
-  <title>Tst</title>
+  <title>login</title>
   <!-- <link href="/dist/output.css" rel="stylesheet"> -->
   <script src="https://cdn.tailwindcss.com"></script>
 <!--  -->
@@ -153,7 +153,7 @@
                     <span class="text-ungu1">In</span>Ventory
                 </div>
                 <div class="py-5 md:py-10">
-                    <div class="sm:ml-[80px] md:ml-[10px] lg:ml-[73px] xl:ml-[100px] wrapper">
+                    <div class="sm:ml-[84px] md:ml-[15px] lg:ml-[75px] xl:ml-[110px] wrapper">
                       <ul class="dynamic-text">
                           <li><span>Sudah punya akun?</span></li>
                           <li><span>Log In Sekarang!</span></li>
