--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -267,8 +267,10 @@
     <div class="absolute bg-pp ml-[5px] sm:ml-[11px] md:ml-[12px] lg:ml-[235px] xl:ml-[225px] w-[415px] sm:w-[615px] md:w-[742px] lg:w-[760px] xl:w-[1100px] h-[150px] sm:h-[150px] bg-gradient-to-t from-ungu1 to-ungu2 p-8 m-96 mt-[80px] sm:mt-[80px] lg:mt-[120px] xl:mt-[120px] rounded-b-none rounded-xl">
         <a href=""><img src="../../img/back.svg" alt="" class="w-[30px] h-[30px] -ml-5 sm:-ml-5 -mt-5 sm:-mt-5 xl:-ml-4 xl:-mt-4 absolute"></a>
         <h1 class="hidden lg:block absolute text-[25px] font-semibold text-white lg:-mt-[20px] xl:-mt-4 lg:ml-[600px] xl:ml-[930px]">NoFace21</h1>
-        <div class="ml-[10px] sm:ml-[70px] mt-[50px] sm:mt-[60px] lg:ml-[290px] xl:ml-[445px] xl:mt-[40px]"> 
+        <div class="ml-[10px] sm:ml-[70px] mt-[50px] sm:mt-[60px] lg:ml-[290px] xl:ml-[445px] xl:mt-[40px]">
+          <a href="">
             <img src="../../img/noface.jpg" alt="profile" class="w-32 lg:w-32 rounded-full border-4 shadow-xl">
+          </a>
         </div>
           <h1 class="-mt-[105px] sm:-mt-[110px] lg:mt-[20px] text-[18px] font-semibold ml-[180px] sm:ml-[250px] lg:ml-[275px] xl:ml-[435px] text-white lg:text-slate-900">NoFace TwentyOne</h1>
           <p class="absolute mt-[10px] sm:mt-[5px] md:mt-[10px] pt-2 ml-[213px] sm:ml-[250px] lg:ml-[310px] xl:ml-[460px] text-slate-600">User / Owner</p>
