menambahkan padding pada popup tambah variasi

--- a/public/gudang/tambah-barang.html
+++ b/public/gudang/tambah-barang.html
@@ -732,7 +732,7 @@
     <form action="" class="modal">
       <div class="modal-popup">
         <div id="box">
-          <div class="title">
+          <div class="title p-3">
             <span class="title font-semibold capitalize">tambah barang</span>
           </div>
           <div class="content rounded-xl">
