--- a/public/dashboard/dataSupplier.html
+++ b/public/dashboard/dataSupplier.html
@@ -224,6 +224,9 @@ body{
   max-height: 3.5rem;
   overflow: hidden;
 }
+.navbar-table{
+  opacity: 0;
+}
 @keyframes myanimate {
   0%{
     max-height: 3.5rem;
