update animasi pada halaman gudang.html

--- a/public/gudang/gudang.html
+++ b/public/gudang/gudang.html
@@ -186,6 +186,9 @@ body{
   max-height: 3.5rem;
   overflow: hidden;
 }
+.title-table{
+  opacity: 0;
+}
 @keyframes myanimate {
   0%{
     max-height: 3.5rem;
