responsive semua form

--- a/public/dashboard/ubahSupplier.html
+++ b/public/dashboard/ubahSupplier.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;700;900&family=Kaisei+Tokumin:wght@400;500;700&family=Poppins:wght@200;300;400&display=swap" rel="stylesheet">
   <!-- End G-Font -->
-  <title>Ubah Kategori</title>
+  <title>Ubah Data Supplier</title>
   <!-- link my css -->
   <link rel="stylesheet" href="../../dist/style.css">
   <!-- end of  link my css -->
@@ -460,7 +460,7 @@
     </div>
     <!-- end of pop up box -->
     
-<script src="../../dist/script.js"></script>
+<script src="../../dist/dashboardScript/script.js"></script>
 <!-- <script>
   const popup = document.querySelector('.modal-popup');
 
