--- a/public/gudang/tambah-barang.html
+++ b/public/gudang/tambah-barang.html
@@ -814,6 +814,17 @@
       modal.style.display = "flex";
     }
   })
+
+// Hamburger
+const hamburger = document.querySelector('#hamburger');
+const navMenu = document.querySelector('#nav-menu');
+const navInput = document.querySelector('.nav-input');
+
+hamburger.addEventListener('click', function(){
+    hamburger.classList.toggle('hamburger-active');
+    navMenu.classList.toggle('hidden');
+});
+
 </script>
 
 </body>
