--- a/public/kategori/Elektronik.html
+++ b/public/kategori/Elektronik.html
@@ -651,6 +651,6 @@ body{
 
     <!-- END CONTENT -->
 
-<script src="../dist/script.js"></script>
+<script src="../../src/script.js"></script>
 </body>
 </html>
