--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -307,7 +307,7 @@
     </div>
     <!-- end of pop up box -->
     
-<script src="../../dist/script.js"></script>
+<script src="../../src/script.js"></script>
 <!-- <script>
   const popup = document.querySelector('.modal-popup');
 
