--- a/public/satuan/dus.html
+++ b/public/satuan/dus.html
@@ -641,6 +641,6 @@ body{
     <!-- end of tables -->
 
     <!-- END CONTENT -->
-<script src="../dist/script.js"></script>
+<script src="../../src/script.js"></script>
 </body>
 </html>
