--- a/public/kategori/alat_tulis.html
+++ b/public/kategori/alat_tulis.html
@@ -654,6 +654,6 @@ body{
 
     <!-- END CONTENT -->
 
-<script src="../dist/script.js"></script>
+<script src="../../src/script.js"></script>
 </body>
 </html>
