--- a/public/kategori/furniture.html
+++ b/public/kategori/furniture.html
@@ -643,6 +643,6 @@ body{
 
     <!-- END CONTENT -->
 
-<script src="../dist/script.js"></script>
+<script src="../../src/script.js"></script>
 </body>
 </html>
