--- a/public/kategori/kategori-barang.html
+++ b/public/kategori/kategori-barang.html
@@ -430,6 +430,6 @@
 
     <!-- END CONTENT -->
 
-<script src="../dist/script.js"></script>
+<script src="../../src/script.js"></script>
 </body>
 </html>
