--- a/public/kategori/pakaian.html
+++ b/public/kategori/pakaian.html
@@ -676,6 +676,6 @@ body{
 
     <!-- END CONTENT -->
 
-<script src="../dist/script.js"></script>
+<script src="../../src/script.js"></script>
 </body>
 </html>
