--- a/public/laporan/laporan-barang.html
+++ b/public/laporan/laporan-barang.html
@@ -650,7 +650,7 @@
         <!-- end of pop up box -->
     </div>
     
-<script src="../../dist/script.js"></script>
+<script src="../../src/script.js"></script>
 <!-- <script>
   const popup = document.querySelector('.modal-popup');
 
