--- a/public/peminjaman/peminjaman-hari-ini.html
+++ b/public/peminjaman/peminjaman-hari-ini.html
@@ -852,6 +852,6 @@ body{
 
     <!-- END CONTENT -->
 
-<script src="../dist/script.js"></script>
+<script src="../../src/script.js"></script>
 </body>
 </html>
