--- a/public/pengajuan/pengajuan-barang.html
+++ b/public/pengajuan/pengajuan-barang.html
@@ -846,6 +846,6 @@ body{
 
     <!-- END CONTENT -->
 
-<script src="../dist/script.js"></script>
+<script src="../../dist/dashboardScript/script.js"></script>
 </body>
 </html>
