--- a/public/satuan/kilogram.html
+++ b/public/satuan/kilogram.html
@@ -641,6 +641,6 @@ body{
 
     <!-- END CONTENT -->
 
-<script src="../dist/script.js"></script>
+<script src="../../src/script.js"></script>
 </body>
 </html>
