--- a/public/satuan/pcs.html
+++ b/public/satuan/pcs.html
@@ -639,6 +639,6 @@ body{
 
     <!-- END CONTENT -->
 
-<script src="../dist/script.js"></script>
+<script src="../../src/script.js"></script>
 </body>
 </html>
