--- a/public/satuan/satuan-barang.html
+++ b/public/satuan/satuan-barang.html
@@ -423,6 +423,6 @@
 
     <!-- END CONTENT -->
 
-<script src="../dist/script.js"></script>
+<script src="../../src/script.js"></script>
 </body>
 </html>
