--- a/public/gudang/tambah-barang.html
+++ b/public/gudang/tambah-barang.html
@@ -406,29 +406,6 @@
       /* end of modal popup style */
 
       /* responsive */
-      @media screen and (max-width: 1019px) {
-        .modal-popup > #box{
-          width: 50%;
-        }
-      }
-      @media screen and (max-width: 699px){
-        .modal-popup > #box{
-          width: 60%;
-        }
-      }
-      @media screen and (max-width: 579px){
-        .content > .row > .main{
-          flex-wrap: wrap;
-          justify-content: center;
-          overflow: auto;
-        }
-      }
-      @media screen and (max-width: 375px){
-         .content > .row > .main{
-          margin-top : 0;
-        }
-      }
-      
       @media screen and (min-width: 1280px){
         .container{
           width: 80%;
@@ -456,6 +433,11 @@
         }
         .tambah-barang{
           margin-left: -15%
+        }
+      }
+      @media screen and (max-width: 1019px) {
+        .modal-popup > #box{
+          width: 50%;
         }
       }
       @media screen and (max-width: 900px){
@@ -491,6 +473,11 @@
       @media screen and (max-width: 711px){
         .content-variasi{
           margin-left: 45%;
+        }
+      }
+      @media screen and (max-width: 699px){
+        .modal-popup > #box{
+          width: 60%;
         }
       }
       @media screen and (max-width: 682px){
@@ -533,6 +520,13 @@
         .tambah-barang > .content-variasi > .btn-addVariasi{
           width: 10rem;
           margin-left: 1rem;
+        }
+      }
+      @media screen and (max-width: 579px){
+        .content > .row > .main{
+          flex-wrap: wrap;
+          justify-content: center;
+          overflow: auto;
         }
       }
       @media screen and (max-width: 566px){
@@ -617,6 +611,11 @@
           width: 100%;
           left: -18%;
           overflow: hidden;
+        }
+      }
+      @media screen and (max-width: 375px){
+        .content > .row > .main{
+          margin-top : 3rem;
         }
       }
       @media screen and (max-width: 360px){
