add animte untuk halaman tambahBarang.html bagian header

--- a/public/gudang/tambah-barang.html
+++ b/public/gudang/tambah-barang.html
@@ -34,6 +34,8 @@
       }
       .title-table{
         width: 81.5%;
+        left: 3.07%;
+        opacity: 0;
       }
       .container{
         width: 81.5%;
@@ -417,11 +419,19 @@
           width: 78%;
           left: 3%;
         }
+        .title-table{
+          left: 5.08%;
+          opacity: 0;
+        }
       }
       @media screen and (max-width: 1110px){
         .container, .title-table{
           width: 75%;
           left: 5%;
+        }
+        .title-table{
+          left: 8.09%;
+          opacity: 0;
         }
         .tambah-barang{
           margin-left: -10%;
@@ -430,6 +440,10 @@
       @media screen and (max-width: 1023px){
         .container, .title-table{
           left: -4%;
+        }
+        .title-table{
+          left: 8%;
+          opacity: 0;
         }
         .tambah-barang{
           margin-left: -15%
@@ -583,13 +597,13 @@
         }
       }
       @media screen and (max-width: 435px){
-        .title-table{
+        .title-table, .container{
           width: 90%;
           left: -13%;
         }
-        .container{
-          width: 90%;
-          left: -13%;
+        .title-table{
+          left: 30%;
+          opacity: 0;
         }
       }
       @media screen and (max-width: 420px){
@@ -606,6 +620,9 @@
         .title-table{
           width: 100%;
           left: -18%;
+        }
+        .title-table{
+          opacity: 0;
         }
         .container{
           width: 100%;
