tidak jadi mengubah nama folder javascript

--- a/public/kategori/alat_tulis.html
+++ b/public/kategori/alat_tulis.html
@@ -23,6 +23,7 @@
 
 body{
   background-color: #F3E8FF;
+  opacity: 0;
 }
 
 .content{
@@ -198,11 +199,11 @@ body{
   max-height: 3.5rem;
   overflow: hidden;
 }
-.title-table{
+/* .title-table{
   margin-left: 25%;
   width: 70%;
   opacity: 0;
-}
+} */
 @keyframes myanimate {
   0%{
     max-height: 3.5rem;
@@ -364,7 +365,7 @@ body{
     }
   </script>
 </head>
-<body class="h-screen mx-auto antialiased flex justify-between bg-purple-100 font-inter">
+<body class="h-screen mx-auto antialiased flex justify-between bg-purple-100 font-inter" onload="onload()">
 
     <!-- NAV -->
     <div class="navbar fixed flex p-5 bg-gradient-to-r from-ungu1 to-ungu2 w-100% mr-0 z-10">
@@ -562,7 +563,7 @@ body{
         <!-- end of title table -->
 
         <!-- tables -->
-        <div class="container-table">
+        <div class="container-table" id="content">
           <table class="table" cellspacing="0" cellpadding="0">
             <thead>
               <tr class="font-semibold">
@@ -607,7 +608,7 @@ body{
               <button type="button" name="button" class="next"><span>Next </span><img src="../../img/icons/next.png" alt="Next"></button>
           </div>
         </div>
-    </div>
+      </div>
     </div>
 
     <!-- table hidden -->
@@ -672,6 +673,6 @@ body{
 
     <!-- END CONTENT -->
 
-<script src="../../src/script.js"></script>
+<script src="../../dist/kategoriJS/alatTulis.js"></script>
 </body>
 </html>
