--- a/public/kategori/alat_tulis.html
+++ b/public/kategori/alat_tulis.html
@@ -199,11 +199,9 @@ body{
   max-height: 3.5rem;
   overflow: hidden;
 }
-/* .title-table{
-  margin-left: 25%;
-  width: 70%;
+.title-table{
   opacity: 0;
-} */
+}
 @keyframes myanimate {
   0%{
     max-height: 3.5rem;
