update field table hidden di ukuran smartphone

--- a/public/kategori/Elektronik.html
+++ b/public/kategori/Elektronik.html
@@ -622,32 +622,24 @@ body{
           <table class="table" cellspacing="0" cellpadding="0">
             <thead>
               <tr>
-                <th>Id</th>
+                <th class="font-semibold">Id</th>
                 <td>BRG-001</td>
               </tr>
               <tr>
-                <th>Nama</th>
+                <th class="font-semibold">Nama</th>
                 <td>keybord</td>
               </tr>
               <tr>
-                <th>Tanggal Update</th>
+                <th class="font-semibold">Tanggal Update</th>
                 <td>logitech</td>
               </tr>
               <tr>
-                <th>satuan</th>
-                <td>dus</td>
+                <th class="font-semibold">masuk</th>
+                <td>20</td>
               </tr>
               <tr>
-                <th>harga Satuan</th>
-                <td></td>
-              </tr>
-              <tr>
-                <th>stok-Awal</th>
+                <th class="font-semibold">keluar</th>
                 <td>10</td>
-              </tr>
-              <tr>
-                <th>stok-Akhir</th>
-                <td>6</td>
               </tr>
               <tr>
                 <th class="font-semibold">aksi</th>
