responsive hal profile

--- a/public/dashboard/dash.html
+++ b/public/dashboard/dash.html
@@ -60,6 +60,46 @@
         display: flex;
       } */
 
+      /*Nav Profile */
+
+      @media screen and (max-width: 1365px){
+        div.profile {
+          margin-left: 82%;
+        }
+      }
+
+      @media screen and (max-width: 1279px){
+        div.profile {
+          margin-left: 77.5%;
+        }
+      }
+
+      @media screen and (max-width: 1023px){
+        div.profile {
+          margin-left: 65%;
+        }
+      }
+
+      @media screen and (max-width: 767px){
+        div.profile {
+          margin-left: 58%;
+        }
+      }
+
+      @media screen and (max-width: 639px){
+        div.profile {
+          margin-left: 38%;
+        }
+      }
+
+      @media screen and (max-width: 449px){
+        div.profile {
+          margin-left: 26%;
+        }
+      }
+
+      /* End Nav Profile */
+
     }
   </style>
 <!--  -->
@@ -274,8 +314,8 @@
         <h1 class="text-2xl font-semibold text-ungu1 mr-[20px]">Dashboard</h1>
         <input type="date" id="tanggal" name="tanggal" class="rounded-lg text-sm text-gray-700 px-10">
       </div>
-      <div class="grid md:grid-cols-2 md:gap-x-[380px] lg:grid-cols-4 gap-x-[285px] lg:gap-x-[285px]"> 
-          <a href="../gudang/gudang.html" class="thumb w-[350px] sm:w-[550px] md:w-[360px] lg:w-[264px] h-[150px] lg:h-[70px] bg-white rounded-lg shadow-lg mt-5">
+      <div class="grid md:grid-cols-2 md:gap-x-[380px] lg:grid-cols-4 gap-x-[285px] lg:gap-x-[285px]">
+          <a href="../gudang/gudang.html" id="thumb" class="thumb w-[350px] sm:w-[550px] md:w-[360px] lg:w-[264px] xl:w-[264px] h-[150px] lg:h-[70px] bg-white rounded-lg shadow-lg mt-5">
               <img src="../../img/barstatic.png" alt="" class="w-12 h-12 absolute ml-[45px] mt-[50px] lg:w-6 lg:h-6 lg:ml-[21px] lg:mt-[23px]">
             <div class="ml-[25px] mt-7 w-[90px] h-[90px] bg-biru rounded-[25px] lg:rounded-2xl lg:w-[50px] lg:h-[50px] lg:mt-[10px] lg:ml-2">
               <h1 class="absolute -z-5 ml-[200px] -mt-2 font-semibold text-[50px] lg:text-[35px] lg:ml-[180px] lg:-mt-[13px]">561</h1>
@@ -283,7 +323,7 @@
             </div>
           </a> 
 
-          <a href="" class="thumb w-[350px] sm:w-[550px] md:w-[360px] lg:w-[264px] h-[150px] lg:h-[70px] bg-white rounded-lg shadow-lg mt-5">
+          <a href="" id="thumb" class="thumb w-[350px] sm:w-[550px] md:w-[360px] lg:w-[264px] h-[150px] lg:h-[70px] bg-white rounded-lg shadow-lg mt-5">
               <img src="../../img/recieve.png" alt="" class="w-16 h-16 absolute ml-[39px] mt-[43px] lg:w-10 lg:h-10 lg:ml-[13px] lg:mt-[16px]">
             <div class="ml-[25px] mt-7 w-[90px] h-[90px] bg-hijau rounded-[25px] lg:rounded-2xl lg:w-[50px] lg:h-[50px] lg:mt-[10px] lg:ml-2">
               <h1 class="absolute -z-5 ml-[240px] -mt-2 font-semibold text-[50px] lg:text-[35px] lg:ml-[215px] lg:-mt-[13px]">5</h1>
@@ -291,7 +331,7 @@
             </div>
           </a> 
 
-          <a href="" class="thumb w-[350px] sm:w-[550px] md:w-[360px] lg:w-[264px] h-[150px] lg:h-[70px] bg-white rounded-lg shadow-lg mt-5">
+          <a href="" id="thumb" class="thumb w-[350px] sm:w-[550px] md:w-[360px] lg:w-[264px] h-[150px] lg:h-[70px] bg-white rounded-lg shadow-lg mt-5">
               <img src="../../img/download.png" alt="" class="w-12 h-12 absolute ml-[46px] mt-[50px] lg:w-6 lg:h-6 lg:ml-[21px] lg:mt-[23px]">
             <div class="ml-[25px] mt-7 w-[90px] h-[90px] bg-kuning rounded-[25px] lg:rounded-2xl lg:w-[50px] lg:h-[50px] lg:mt-[10px] lg:ml-2">
               <h1 class="absolute -z-5 ml-[240px] -mt-2 font-semibold text-[50px] lg:text-[35px] lg:ml-[200px] lg:-mt-[13px]">2</h1>
@@ -299,7 +339,7 @@
             </div>
           </a> 
 
-          <a href="" class="thumb w-[350px] sm:w-[550px] md:w-[360px] lg:w-[264px] h-[150px] lg:h-[70px] bg-white rounded-lg shadow-lg mt-5">
+          <a href="" id="thumb" class="thumb w-[350px] sm:w-[550px] md:w-[360px] lg:w-[264px] h-[150px] lg:h-[70px] bg-white rounded-lg shadow-lg mt-5">
               <img src="../../img/upload.png" alt="" class="w-12 h-12 absolute ml-[46px] mt-[50px] lg:w-6 lg:h-6 lg:ml-[21px] lg:mt-[23px]">
             <div class="ml-[25px] mt-7 w-[90px] h-[90px] bg-birumuda rounded-[25px] lg:rounded-2xl lg:w-[50px] lg:h-[50px] lg:mt-[10px] lg:ml-2">
               <h1 class="absolute -z-5 ml-[240px] -mt-2 font-semibold text-[50px] lg:text-[35px] lg:ml-[200px] lg:-mt-[13px]">5</h1>
@@ -307,7 +347,7 @@
             </div>
           </a> 
 
-          <a href="" class="thumb w-[350px] sm:w-[550px] md:w-[360px] lg:w-[264px] h-[150px] lg:h-[70px] bg-white rounded-lg shadow-lg mt-5 mb-5">
+          <a href="" id="thumb" class="thumb w-[350px] sm:w-[550px] md:w-[360px] lg:w-[264px] h-[150px] lg:h-[70px] bg-white rounded-lg shadow-lg mt-5 mb-5">
               <img src="../../img/check.png" alt="" class="w-12 h-12 absolute ml-[46px] mt-[50px] lg:w-6 lg:h-6 lg:ml-[21px] lg:mt-[23px]">
             <div class="ml-[25px] mt-7 w-[90px] h-[90px] bg-ungu1 rounded-[25px] lg:rounded-2xl lg:w-[50px] lg:h-[50px] lg:mt-[10px] lg:ml-2">
               <h1 class="absolute -z-5 ml-[240px] -mt-2 font-semibold text-[50px] lg:text-[35px] lg:ml-[200px] lg:-mt-[13px]">3</h1>
