--- a/public/satuan/satuan-barang.html
+++ b/public/satuan/satuan-barang.html
@@ -35,7 +35,7 @@
         position: relative;
       } */
       .card{
-        width: 16.5rem;
+        width: 315px;
         height: 9.9rem;
         /* margin-left: 15rem; */
         margin-top: 1.5rem;
@@ -99,7 +99,47 @@
         }
       } */
 
-      @media (max-width: 639px){
+      /*Nav Profile */
+
+      @media screen and (max-width: 1365px){
+        div.profile {
+          margin-left: 82%;
+        }
+      }
+
+      @media screen and (max-width: 1279px){
+        div.profile {
+          margin-left: 77.5%;
+        }
+      }
+
+      @media screen and (max-width: 1023px){
+        div.profile {
+          margin-left: 65%;
+        }
+      }
+
+      @media screen and (max-width: 767px){
+        div.profile {
+          margin-left: 58%;
+        }
+      }
+
+      @media screen and (max-width: 639px){
+        div.profile {
+          margin-left: 38%;
+        }
+      }
+
+      @media screen and (max-width: 449px){
+        div.profile {
+          margin-left: 26%;
+        }
+      }
+
+      /* End Nav Profile */
+
+      /* @media (max-width: 639px){
         .title{
           margin-left: 0;
           text-align: center;
@@ -128,7 +168,7 @@
           width: 100%;
           padding: 2rem;
         }
-      }
+      } */
       /* end of responsive style */
       
 
@@ -359,59 +399,59 @@
     <!-- CONTENT -->
     <section class="satuan-barang -ml-[45px] lg:-ml-5 sm:-ml-2 md:-ml-3">
       <div class="title">
-        <h1 class="font-semibold">satuan barang</h1>
+        <h1 class="font-semibold md:-ml-[200px] lg:ml-3">satuan barang</h1>
       </div>
-      <div class="cards grid sm:grid-cols-2 sm:gap-x-10 sm:mx-100 sm:ml-1 sm:mx-5 sm:p-3 md:grid-cols-2 md:ml-5 md:mr-5 lg:grid-cols-3 lg:ml-60 xl:grid-cols-4 xl:ml-60 gap-x-7">
-        <div class="card sm:w-[305px] md:w-full lg:w-[16rem] xl:w-[16rem]">
+      <div class="cards grid sm:grid-cols-2 gap-x-5 sm:mx-100 sm:ml-1 sm:mx-5 sm:p-3 md:grid-cols-2 md:ml-5 md:mr-5 lg:grid-cols-3 lg:ml-60 xl:grid-cols-4 xl:ml-60">
+        <div class="card ml-2">
           <div class="content">
             <img src="../../img/icons/kilogram.png" alt="kilogram" class="img-card-one">
             <span class="title-card font-semibold">kilogram</span>
           </div>
           <div class="footer-card">
             <a href="#">
-              <span class="absolute show-detail md:ml-[5rem] lg:ml-[0]">
+              <span class="show-detail">
                 <span>lihat detail</span> 
                 <img src="../../img/icons/rightArrow.png" alt="Show Detail">
               </span>
             </a>
           </div>
         </div>
-        <div class="card sm:w-[305px] md:w-[350px] lg:w-[16rem] xl:w-[16rem]">
+        <div class="card ml-2">
           <div class="content">
             <img src="../../img/icons/pieces.png" alt="Pieces" class="img-card-one">
             <span class="title-card font-semibold" style="color: #01C94B;">pieces</span>
           </div>
           <div class="footer-card">
             <a href="#">
-              <span class="absolute show-detail md:ml-[5rem] lg:ml-[0]">
+              <span class="show-detail">
                 <span>lihat detail</span> 
                 <img src="../../img/icons/rightArrow.png" alt="Show Detail">
               </span>
             </a>
           </div>
         </div>
-        <div class="card sm:w-[305px] md:w-[350px] lg:w-[16rem] xl:w-[16rem]">
+        <div class="card ml-2">
           <div class="content">
             <img src="../../img/icons/pack.png" alt="Pack" class="img-card-one">
             <span class="title-card font-semibold" style="color: #FCD712;">pack</span>
           </div>
           <div class="footer-card">
             <a href="#">
-              <span class="absolute show-detail md:ml-[5rem] lg:ml-[0]">
+              <span class="show-detail">
                 <span>lihat detail</span> 
                 <img src="../../img/icons/rightArrow.png" alt="Show Detail">
               </span>
             </a>
           </div>
         </div>
-        <div class="card sm:w-[305px] md:w-[350px] lg:w-[16rem] xl:w-[16rem]">
+        <div class="card ml-2">
           <div class="content">
             <img src="../../img/icons/dus.png" alt="Dus" class="img-card-one">
             <span class="title-card font-semibold" style="color: #05BADF;">dus</span>
           </div>
           <div class="footer-card">
             <a href="#">
-              <span class="absolute show-detail md:ml-[5rem] lg:ml-[0]">
+              <span class="show-detail">
                 <span>lihat detail</span> 
                 <img src="../../img/icons/rightArrow.png" alt="Show Detail">
               </span>
